--- a/homynyk-notes/res/layout/counter_view.xml
+++ b/homynyk-notes/res/layout/counter_view.xml
@@ -26,7 +26,7 @@
         />
 	<Button
 		android:layout_width="250dp"
-		android:layout_height="wrap_content"
+		android:layout_height="250dp"
 		android:text="add" 
 		android:textSize="20sp"
 		android:id="@+id/bAdd"
@@ -34,10 +34,10 @@
 	 />
 
 	<Button
-	    android:id="@+id/bDelete"
+	    android:id="@+id/bEdit"
 	    android:layout_width="125dp"
 	    android:layout_height="wrap_content"
-	    android:text="delete"
+	    android:text="Edit"
 	    android:textSize="20sp"
 	    android:layout_gravity="center"
 	     />
